--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "study_connect",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node /index.js",
-    "dev": "nodemon /index.js",
+  "main": "server.js",
+  "scripts":
+  {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +21,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.12.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
