updated profileRoutes to use body-parser

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Raphael-Pham/study_connect#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
