started working on the authentication page

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "app": "^0.1.0",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "create-react": "0.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
