--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "final-form": "^4.20.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
