--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ install:
   - npm ci
 
 script:
-  - npm test
+  - make test
   - npm run build
 
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  local_dir: frontend
+  local_dir: build
   on:
     branch: master
