--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-final-form": "^6.5.3",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
