--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "create-react": "^0.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.5",
     "mongodb": "^3.6.6",
+    "mongoose": "^5.12.5",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
+    "react-icons": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "socket.io": "^4.0.1"
   },
